# NTCPP

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindHorizonPluginSDK.cmake
libs/: PluginSDK.h
src/: CMakeLists.txt  Helpers.hpp  Plugin.cpp  Plugin.hpp  PluginInterface.cpp  Singleton.hpp
